[tool.poetry]
name = "rewops"
version = "0.1.0"
description = "Agentic reward function builder from natural language description and evaluation primitives"
authors = ["Meghdad Farahmand <meghdad@calibrion.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
